@@ -14,6 +14,8 @@ UTIL:
 * type=appid-toolbox | improvements for further. new features - example rule address/service report generator
 * type=rule actions=name-replace-character | set default value for replace to ''
 * type=rule | introduce new actions=stats-appid-fastapi:-90days/stats-service-fastapi:/stats-address-source-fastapi/stats-address-destination-fastapi/stats-address-fastapi/stats-traffic-fastapi
+* type=routing | introduce actions=exporttoexcel:file.html
+* type=routing | introduce 'filter=(protocol.bgp is.enabled)'
 
 BUGFIX:
 * class PANConf|VirtualSystem | bugfix to support SharedGateway also for Tag objects correctly
